# cern_Cs136

./: .gitignore  CMakeLists.txt  PulseFinder.cpp  canvas.root  decay.cpp  histToTree.cpp  pulseHistogram.root  test.cpp  time.root
LongCs136/: CMakeLists.txt  fit_gg.root  ggCs136.root  ggmaker.cpp  main.cpp  time.root
Transitions/: GammaIdentifier.ipynb
dHistograms/: ChangeAnalysis.ipynb  t1:1000t2:30000dt:8000.root  t1:3000t2:19000dt:15000.root  t1:3000t2:19000dt:15000betaGate:0.root  t1:3000t2:19000dt:15000betaGate:0.txt  t1:3000t2:19000dt:15000betaGate:1.root  t1:3000t2:27100dt:12400betaGate:0.root  t1:3000t2:27100dt:12400betaGate:0.txt  t1:3000t2:27200dt:12300betaGate:0.root  t1:3000t2:27200dt:12300betaGate:0.txt  t1:3000t2:27300dt:12200betaGate:0.root  t1:3000t2:27300dt:12200betaGate:0.txt  t1:3000t2:27400dt:12100betaGate:0.root  t1:3000t2:27400dt:12100betaGate:0.txt  t1:3000t2:27500dt:12000betaGate:0.root  t1:3000t2:27500dt:12000betaGate:0.txt  t1:3000t2:27600dt:11900betaGate:0.root  t1:3000t2:27600dt:11900betaGate:0.txt  t1:3000t2:27700dt:11800betaGate:0.root  t1:3000t2:27700dt:11800betaGate:0.txt  t1:3000t2:27800dt:11700betaGate:0.root  t1:3000t2:27800dt:11700betaGate:0.txt  t1:3000t2:27900dt:11600betaGate:0.root  t1:3000t2:27900dt:11600betaGate:0.txt  t1:3000t2:28000dt:10000betaGate:0.root  t1:3000t2:28000dt:11500betaGate:0.root  t1:3000t2:28000dt:11500betaGate:0.txt  t1:3000t2:28100dt:11400betaGate:0.root  t1:3000t2:28100dt:11400betaGate:0.txt  t1:3000t2:28200dt:11300betaGate:0.root  t1:3000t2:28200dt:11300betaGate:0.txt  (+277 more)
data/: online_cal.cal
(+14 files in other folders)
